--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simdope",
-  "version": "1.4.3",
+  "version": "3.1.0",
   "description": "SIMDope 🎨 ~21.6 kB minified (6kB Gzipped and 0 dep.) - Color trafficking library faster than tools not mentioning it, lighting fast and around 1000 lines of code",
   "devDependencies": {
     "tinyify": "^4.0.0"
@@ -35,6 +35,7 @@
     "node": ">=0.8.0"
   },
   "dependencies": {
+    "asc": "^2.0.3",
     "core-js": "^3.27.1"
   }
 }
