--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "simdope",
-  "version": "3.5.0",
-  "description": "SIMDope 🎨 - Color trafficking library faster than tools not mentioning it, lighting fast and around 1500 lines of code (~7kB Gzipped and 0 dep.)",
+  "version": "5.5.5",
+  "description": "SIMDope 🎨 - Color trafficking library faster than tools not mentioning it, lighting fast and around 1700 lines of code (~7kB Gzipped and 0 dep.)",
   "devDependencies": {
-    "tinyify": "^4.0.0"
+    "path": "~0.12.7",
+    "uglifyjs-3-webpack-plugin": "~1.2.4",
+    "webpack": "~4.37.0",
+    "webpack-cli": "~4.10.0"
   },
   "build": {},
-  "scripts": {},
   "author": "Affolter Matias",
   "keywords": [
     "simd",
@@ -34,6 +36,9 @@
     "uint32",
     "uint8"
   ],
+  "scripts": {
+    "build": "NODE_ENV=production webpack --node-env \"production\""
+  },
   "license": "MIT",
   "repository": {
     "type": "git",
